<resources>
    <string name="app_name">FindMyLecture</string>
    <string name="submit_button">Get Me There!</string>
    <string name="return_button">Return</string>
    <string name="error_oops">Oops!</string>
    <string name="error_explanation">Something Went Wrong! </string>
    <string name="error_return">Return</string>
    <string name="current_location"> Use Current Location </string>
    <string name="custom_location"> Use Custom Location </string>
    <string name="enterlocation">Enter Location</string>
    <string name="enterdestination">Enter Destination</string>
    <string name="requestLoc">Request Location</string>
    <string name="getAddress">Address:</string>
    <string name="leavingFrom">Where are you leaving from?</string>
    <string name="goingTo">Where do you want to go?</string>
    <string name="goButton">Go</string>
</resources>
