<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding ="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/locationEntry"
        android:hint="@string/enterlocation"

        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/destinationEntry"
        android:hint="@string/enterdestination"

        />

    <LinearLayout
        android:weightSum="100"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="50"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/returnButton"
            android:text="@string/return_button"
            />

        <Button
            android:layout_weight="50"
            android:layout_width="fill_parent"
            android:id="@+id/btnGo"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:id="@+id/invalidresponse"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="283dp"
        app:srcCompat="@drawable/mappymapmap"
        android:id="@+id/imageView2" />

    <TextClock
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:id="@+id/textClock2" />

</LinearLayout>


