<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="96dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/error_oops"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:textSize="70dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/error_explanation"
            android:id="@+id/textView2"
            android:layout_gravity="center" />

        <Button
            android:layout_width="186dp"
            android:layout_height="131dp"
            android:text="@string/error_return"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal|bottom" />
    </FrameLayout>
</LinearLayout>